log
ma.,  3 de may. de 2022 19:14:12: 
ma.,  3 de may. de 2022 19:14:12: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|3
 tests:  1|3
total_score: 10/70
2684978
ma.,  3 de may. de 2022 19:26:52: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_top':
heap.c:22:10: error: unused variable 'dato' [-Werror=unused-variable]
    void* dato = pq->heapArray->data;
          ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8316d04
